--- a/w01assignment/index.html
+++ b/w01assignment/index.html
@@ -49,6 +49,13 @@
             </div>
            
         </footer>
+        <p>
+            <a href="https://jigsaw.w3.org/css-validator/check/referer">
+                <img style="border:0;width:88px;height:31px"
+                    src="https://jigsaw.w3.org/css-validator/images/vcss"
+                    alt="Valid CSS!" />
+            </a>
+        </p>
         <script src="js/main.js"></script>
         <script src="js/dates.js"></script>
     </body> 
