pull for changes on design principles document

--- a/lesson02/design_principles.html
+++ b/lesson02/design_principles.html
@@ -56,8 +56,8 @@
                 </picture>
                 <p>
                     This page uses alignment to position several elements. It brings to the page a sensation of unity and a well organized design.
-                    It also gives some sort of connection to each element. While, the fact that is perfectly aligned doesn't really catch the viewer's attention, 
-                    The way it is displayed makes them stop and look further. Here, all the pictures are aligned in the same vertical position that could easily catch the view of the reader.
+                    It also gives some sort of connection to each element. While, the fact that the elements are perfectly aligned doesn't really catch the viewer's attention, 
+                    the way it is displayed makes them stop and look further. Here, all the pictures are aligned in the same vertical position that could easily catch the view of the reader.
                 </p>
             </div>
         </main>
