--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
     <head>
         <meta charset = "utf-8" />
         <meta name = "viewport" content="width=device-width, initial-scale=1.0" />
+        <meta
+            name="description"
+            content="Assignment portal for Haingotiana N Rambikarison: Web Frontend Development at Brigham Young University - Idaho"
+        />
         <title>Haingotiana WDD230 Assignment Portal</title>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -12,55 +16,57 @@
         <link rel="stylesheet" href="css/medium.css">
     </head>
     <body>
-        <header>
-            <section class="name">
-                <picture>
-                    <img src="images/haingo.jpg" alt="picture of Haingotiana N Rambikarison" />
-                </picture>
-                <h1>Haingotiana N. Rambikarison</h1>   
-            </section>
-            <h2>WDD 230: Assignment Portal</h2>
-            <hr>
-        </header>
-        <main>
-            <div id="list">
-                <nav>
-                    <ul>
-                        <li>Lesson 02: <a href="./lesson02/design_principles.html">Design Principles</li>
-                        <li>Lesson 03: <a href="">Title</a></li>
-                        <li>Lesson 04: <a href="">Title</a></li>
-                        <li>Lesson 05: <a href="">Title</a></li>
-                        <li>Lesson 06: <a href="">Title</a></li>
-                        <li>Lesson 07: <a href="">Title</a></li>
-                        <li>Lesson 08: <a href="">Title</a></li>
-                        <li>Lesson 09: <a href="">Title</a></li>
-                        <li>Lesson 10: <a href="">Title</a></li>
-                        <li>Lesson 11: <a href="">Title</a></li>
-                    </ul>
-                </nav>
-            </div>
-            <hr>
-            <div id="note">
-                Some lessons may need more than one activity/assignment link.
-            </div>  
-        </main>
-        <footer>
-            <div id="signature">
-                &copy;<span id="year"></span> .:|:. Haingotiana N. Rambikarison .:|:. Madagascar
-            </div>
-            <div id="update">
-                Last Updated: <span id="lastModifiedDate"></span>
-            </div>
-           
-        </footer>
-        <p>
-            <a href="https://jigsaw.w3.org/css-validator/check/referer">
-                <img style="border:0;width:88px;height:31px"
-                    src="https://jigsaw.w3.org/css-validator/images/vcss"
-                    alt="Valid CSS!" />
-            </a>
-        </p>
-        <script src="js/main.js"></script>
-        <script src="js/dates.js"></script>
+        <div class="content">
+            <header>
+                <section class="name">
+                    <picture>
+                        <img src="images/haingo.jpg" alt="picture of Haingotiana N Rambikarison" />
+                    </picture>
+                    <h1>Haingotiana N. Rambikarison</h1>   
+                </section>
+                <h2>WDD 230: Assignment Portal</h2>
+                <hr>
+            </header>
+            <main>
+                <div id="list">
+                    <nav>
+                        <ul>
+                            <li>Lesson 02: <a href="./lesson02/design_principles.html">Design Principles</li>
+                            <li>Lesson 03: <a href="">Title</a></li>
+                            <li>Lesson 04: <a href="">Title</a></li>
+                            <li>Lesson 05: <a href="">Title</a></li>
+                            <li>Lesson 06: <a href="">Title</a></li>
+                            <li>Lesson 07: <a href="">Title</a></li>
+                            <li>Lesson 08: <a href="">Title</a></li>
+                            <li>Lesson 09: <a href="">Title</a></li>
+                            <li>Lesson 10: <a href="">Title</a></li>
+                            <li>Lesson 11: <a href="">Title</a></li>
+                        </ul>
+                    </nav>
+                </div>
+                <hr>
+                <div id="note">
+                    Some lessons may need more than one activity/assignment link.
+                </div>  
+            </main>
+            <footer>
+                <div id="signature">
+                    &copy;<span id="year"></span> .:|:. Haingotiana N. Rambikarison .:|:. Madagascar
+                </div>
+                <div id="update">
+                    Last Modified: <span id="lastModifiedDate"></span>
+                </div>
+               
+            </footer>
+            <p>
+                <a href="https://jigsaw.w3.org/css-validator/check/referer">
+                    <img style="border:0;width:88px;height:31px"
+                        src="https://jigsaw.w3.org/css-validator/images/vcss"
+                        alt="Valid CSS!" />
+                </a>
+            </p>
+            <script src="js/main.js"></script>
+            <script src="js/dates.js"></script>
+        </div>
     </body> 
 </html>
