--- a/lesson02/design_principles.html
+++ b/lesson02/design_principles.html
@@ -18,9 +18,9 @@
             <h2 class="name">Haingotiana N Rambikarison</h2>
         </header>
         <main>
-            
             <div class="section1">
-                <h3>Visual Hierarchy</h3>
+                <h2 class="card">Visual Hierarchy</h2>
+                <h3 id=site-1>DoTerra</h3>
                 <p><a href="https://www.doterra.com/US/en/" target="_blank">doterra.com</a></p>
                 <picture>
                     <img src=images/visual-hierarchy.jpg alt="image with visual hierarchy in website">
@@ -34,9 +34,9 @@
                     used here is considered as well a visual hierarchy because it acts like a focal point.
                 </p>
             </div>
-
             <div class="section2">
-                <h3>Contrast</h3>
+                <h2 class="card">Contrast</h2>
+                <h3 id="site-2">The Perfume Box</h3>
                 <p><a href="https://theperfumebox.com/" target="_blank">theperfumebox.com</a></p>
                 <picture>
                     <img src=images/contrast.jpg alt="image representing contrast in website">
@@ -49,7 +49,8 @@
                 </p>
             </div>
             <div class="section3">
-                <h3>Alignment</h3>
+                <h2 class="card">Alignment</h2>
+                <h3 div="site-3">Madagascar Tour Expedition</h3>
                 <p><a href="https://www.madagascar-tour-expedition.com/" target="_blank">madagascar-tour-expedition.com</a></p>
                 <picture>
                     <img src="images/alignment.jpg" alt="image of alignment in website ">
