Meta description added

--- a/lesson02/design_principles.html
+++ b/lesson02/design_principles.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset = "utf-8" />
         <meta name = "viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name = "description" content ="WDD230 Lesson 02: Idetifying design principles on 3 different websites">
         <title>Haingotiana WDD230 Design Principles Document</title>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
