--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <nav>
                         <ul>
                             <li>Lesson 02: <a href="./lesson02/design_principles.html">Design Principles</li>
-                            <li>Lesson 03: <a href="">Title</a></li>
+                            <li>Lesson 03: <a href="./lesson03/index.html">Website Planning Document</a></li>
                             <li>Lesson 04: <a href="">Title</a></li>
                             <li>Lesson 05: <a href="">Title</a></li>
                             <li>Lesson 06: <a href="">Title</a></li>
