update css on homepage {main.css}

--- a/lesson03/index.html
+++ b/lesson03/index.html
@@ -11,16 +11,29 @@
         <link rel="stylesheet" href="./css/large.css">
     </head>
     <body>
+      <div id="content">
         <header>
-            <h1>Green'Fingers Chamber <hr> Site Plan</h1>
-          </header>
-        <div id="content">
-          <main>
+          <div id="heading">
+            <div class="logo-box">
+              <img src="./images/Green'Fingers.jpg" height="auto" width="auto" alt = "green-fingers-chamber logo picture">
+            </div>
+            <h1>Green'Fingers Chamber - Site Plan</h1>
+          </div>
+          <nav>
+            <ul>
+              <div><a href="index.html">&#127968 HOME</a></div>
+              <div><a href="target-audience.html" target="_blank">TARGET AUDIENCE</a></div>
+              <div><a href="color-scheme.html" target="_blank">COLOR SCHEME</a></div>
+              <div><a href="typographie.html" target="_blank">TYPOGRAPHIE</a></div>
+            </nav>
+          </ul>
+        </header>
+        <main>
             <h2>Overview</h2>
             <h3 class="purpose">Purpose</h3>
             <h3 class="name">Domain Name</h3>
-            <h3 class="logo>">Logo</h3>
-            <div class="logo-box">
+            <h3 class="logo">Logo</h3>
+            <div class="logo-box-main">
                 <img src="./images/Green'Fingers.jpg" height="auto" width="auto" alt = "green-fingers-chamber logo picture">
             </div>
           </main>
@@ -33,6 +46,6 @@
             </div>   
         </footer>
         <script src="./js/date.js"></script>
-        </div>
-      </body>
-    </html>
+      </div>
+  </body>
+</html>
