--- a/lesson03/index.html
+++ b/lesson03/index.html
@@ -1,51 +1,72 @@
 <!DOCTYPE html>
 <html lang="en-US">
-    <head>
-        <meta charset = "utf-8" />
-        <meta name = "viewport" content="width=device-width, initial-scale=1.0" />
-        <meta name = "description" content ="WDD230 Lesson 03: Main Page for the Green'Fingers Chamber of Commerce">
-        <title>Haingotiana WDD230 Chamber of Commerce Website</title>
-        <link rel="stylesheet" href="./css/normalize.css">
-        <link rel="stylesheet" href="./css/main.css">
-        <link rel="stylesheet" href="./css/medium.css">
-        <link rel="stylesheet" href="./css/large.css">
-    </head>
-    <body>
-      <div id="content">
-        <header>
-          <div id="heading">
-            <div class="logo-box">
-              <img src="./images/Green'Fingers.jpg" height="auto" width="auto" alt = "green-fingers-chamber logo picture">
-            </div>
-            <h1>Green'Fingers Chamber - Site Plan</h1>
+  <head>
+    <meta charset = "utf-8" />
+    <meta name = "viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name = "description" content ="WDD230 Lesson 03: Main Page for the Green'Fingers Chamber of Commerce">
+    <title>Haingotiana WDD230 Chamber of Commerce Website</title>
+    <link rel="stylesheet" href="./css/normalize.css">
+    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./css/medium.css">
+    <link rel="stylesheet" href="./css/large.css">
+  </head>
+  <body>
+    <div id="content">
+      <header>
+        <div id="heading">
+          <div class="logo-box">
+            <img src="./images/Green'Fingers.jpg" height="auto" width="auto" alt = "green-fingers-chamber logo picture">
           </div>
-          <nav>
-            <ul>
-              <div><a href="index.html">&#127968 HOME</a></div>
-              <div><a href="target-audience.html" target="_blank">TARGET AUDIENCE</a></div>
-              <div><a href="color-scheme.html" target="_blank">COLOR SCHEME</a></div>
-              <div><a href="typographie.html" target="_blank">TYPOGRAPHIE</a></div>
-            </nav>
-          </ul>
-        </header>
-        <main>
-            <h2>Overview</h2>
-            <h3 class="purpose">Purpose</h3>
-            <h3 class="name">Domain Name</h3>
-            <h3 class="logo">Logo</h3>
-            <div class="logo-box-main">
-                <img src="./images/Green'Fingers.jpg" height="auto" width="auto" alt = "green-fingers-chamber logo picture">
-            </div>
-          </main>
-          <footer>
-            <div id="signature">
-                &copy;<span id="year"></span> .:|:. Haingotiana N. Rambikarison .:|:. Madagascar
-            </div>
-            <div id="update">
-                Last Modified: <span id="lastModifiedDate"></span>
-            </div>   
-        </footer>
-        <script src="./js/date.js"></script>
-      </div>
+          <h1>Green'Fingers Chamber - Site Plan</h1>
+        </div>
+        <nav>
+          <ul>
+            <div><a href="index.html">&#127968 HOME</a></div>
+            <div><a href="target-audience.html" target="_blank">TARGET AUDIENCE</a></div>
+            <div><a href="color-scheme.html" target="_blank">COLOR SCHEME</a></div>
+            <div><a href="typographie.html" target="_blank">TYPOGRAPHIE</a></div>
+          </nav>
+        </ul>
+      </header>
+      <main>
+        <section class="details">
+          <h2>Overview</h2>
+          <h3 class="purpose">Purpose</h3>
+          <div id=purpose>
+            <p>
+              Green'Fingers Chamber is focusing its activity on the development of agriculture industry in the municipality of Talatamaty, 
+              a local town located 5km away from the International Airport of Madagascar. Its purpose is to bring together local farmers, technicians and operators, 
+              as well as all those interested in promoting the business around it. 
+              The primary goal of the chamber is to promote the local agriculture industry, and to strengthen the networks and the expertise of the entities. 
+              It is also aimed to attract investors and to develop the tourism in the city. This site will serve as a portal for the agribusiness of the municipality. 
+              Important local, regional and international events that could be related to its development and that could benefit each member will be updated here on a regular basis. 
+            </p>
+          </div>
+          <h3 class="name">Domain Name</h3>
+          <div id="domain-name">
+            <p>The domain name for this site is: <a href="greenfingerschamber.org" target="_blank">greenfingerschamber.org</a></p>
+            
+          </div>
+          <h3 class="logo">Logo</h3>
+          <div id=text-logo>
+              <p>
+                
+              </p>
+          </div>
+          <div class="logo-box-main">
+              <img src="./images/Green'Fingers.jpg" height="auto" width="auto" alt = "green-fingers-chamber logo picture">
+          </div>
+        </section>
+      </main>
+      <footer>
+        <div id="signature">
+          &copy;<span id="year"></span> .:|:. Haingotiana N. Rambikarison .:|:. Madagascar
+        </div>
+        <div id="update">
+          Last Modified: <span id="lastModifiedDate"></span>
+        </div>   
+      </footer>
+      <script src="./js/date.js"></script>
+    </div>
   </body>
 </html>
