--- a/lesson03/target-audience.html
+++ b/lesson03/target-audience.html
@@ -6,18 +6,39 @@
         <meta name = "description" content ="WDD230 Lesson 03: Description of the Target Audience for the Green'Fingers Chamber of Commerce">
         <title>Haingotiana WDD230 Chamber of Commerce Website</title>
         <link rel="stylesheet" href="./css/normalize.css">
-        <link rel="stylesheet" href="./css/target-audience.css">
+        <link rel="stylesheet" href="./css/main.css">
         <link rel="stylesheet" href="./css/medium.css">
         <link rel="stylesheet" href="./css/large.css">
     </head>
     <body>
-        <header>
+        <div id="content">
+            <header>
+              <div id="heading">
+                <div class="logo-box">
+                  <img src="./images/Green'Fingers.jpg" height="auto" width="auto" alt = "green-fingers-chamber logo picture">
+                </div>
+                <h1>Green'Fingers Chamber - Site Plan</h1>
+              </div>
+              <nav>
+                <ul>
+                  <div><a href="index.html">&#127968 HOME</a></div>
+                  <div><a href="target-audience.html" target="_blank">TARGET AUDIENCE</a></div>
+                  <div><a href="color-scheme.html" target="_blank">COLOR SCHEME</a></div>
+                  <div><a href="typographie.html" target="_blank">TYPOGRAPHIE</a></div>
+                </nav>
+              </ul>
+            </header>
+            <main>
 
-        </header>
-        <main>
-
-        </main>
-        <footer>
-            
-        </footer>
+            </main>
+            <footer>
+                <div id="signature">
+                    &copy;<span id="year"></span> .:|:. Haingotiana N. Rambikarison .:|:. Madagascar
+                </div>
+                <div id="update">
+                    Last Modified: <span id="lastModifiedDate"></span>
+                </div>   
+            </footer>
+            <script src="./js/date.js"></script>
+        </div>
     </body>
