github push not working on changes

--- a/lesson02/design_principles.html
+++ b/lesson02/design_principles.html
@@ -16,7 +16,7 @@
     <body>
         <header>    
             <h1>Design Principles Document</h1>
-            <h2 class="name">Haingotiana N Rambikarison</h2>
+            <h2 class="name">Haingotiana N. Rambikarison</h2>
         </header>
         <main>
             <div class="section1">
