renamed css file because of case sensitive issue

--- a/lesson02/design_principles.html
+++ b/lesson02/design_principles.html
@@ -9,9 +9,9 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="./css/normalize.css">
-        <link rel="stylesheet" href="./css/smallview.css">
-        <link rel="stylesheet" href="./css/mediumview.css">
-        <link rel="stylesheet" href="./css/largeview.css">
+        <link rel="stylesheet" href="./css/smallView.css">
+        <link rel="stylesheet" href="./css/mediumView.css">
+        <link rel="stylesheet" href="./css/largeView.css">
     </head>
     <body>
         <header>    
