work on css and completing some part of the pages. Update for more changes

--- a/lesson03/index.html
+++ b/lesson03/index.html
@@ -5,6 +5,12 @@
     <meta name = "viewport" content="width=device-width, initial-scale=1.0" />
     <meta name = "description" content ="WDD230 Lesson 03: Main Page for the Green'Fingers Chamber of Commerce">
     <title>Haingotiana WDD230 Chamber of Commerce Website</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital@1&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Otomanopee+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="./css/medium.css">
@@ -34,11 +40,13 @@
           <h3 class="purpose">Purpose</h3>
           <div id=purpose>
             <p>
-              Green'Fingers Chamber is focusing its activity on the development of agriculture industry in the municipality of Talatamaty, 
-              a local town located 5km away from the International Airport of Madagascar. Its purpose is to bring together local farmers, technicians and operators, 
-              as well as all those interested in promoting the business around it. 
-              The primary goal of the chamber is to promote the local agriculture industry, and to strengthen the networks and the expertise of the entities. 
-              It is also aimed to attract investors and to develop the tourism in the city. This site will serve as a portal for the agribusiness of the municipality. 
+              Green'Fingers Chamber aims to promote the local agriculture industry, and to strengthen the networks and the expertise of the entities. 
+              It also focuses on attracting investors and to develop the tourism in the district. This site will serve as a portal for the agribusiness of the area. 
+              The main objective of Green'Fingers Chamber is to support the development of small farmers' cooperatives and agricultural SMEs by providing comprehensive information, 
+              training and advisory services. 
+              Other services are available at the request of the chamber's clients or based on the need to provide such services through co-creation. 
+              Our training activities are carried out throughout the district through the direct implementation of projects and partnerships to improve local farmers' agricultural production, 
+              market linkages and sustainable incomes.
               Important local, regional and international events that could be related to its development and that could benefit each member will be updated here on a regular basis. 
             </p>
           </div>
