--- a/lesson03/target-audience.html
+++ b/lesson03/target-audience.html
@@ -11,34 +11,62 @@
         <link rel="stylesheet" href="./css/large.css">
     </head>
     <body>
-        <div id="content">
-            <header>
-              <div id="heading">
-                <div class="logo-box">
-                  <img src="./images/Green'Fingers.jpg" height="auto" width="auto" alt = "green-fingers-chamber logo picture">
-                </div>
-                <h1>Green'Fingers Chamber - Site Plan</h1>
+      <div id="content">
+          <header>
+            <div id="heading">
+              <div class="logo-box">
+                <img src="./images/Green'Fingers.jpg" height="auto" width="auto" alt = "green-fingers-chamber logo picture">
               </div>
-              <nav>
-                <ul>
-                  <div><a href="index.html">&#127968 HOME</a></div>
-                  <div><a href="target-audience.html" target="_blank">TARGET AUDIENCE</a></div>
-                  <div><a href="color-scheme.html" target="_blank">COLOR SCHEME</a></div>
-                  <div><a href="typographie.html" target="_blank">TYPOGRAPHIE</a></div>
-                </nav>
+              <h1>Green'Fingers Chamber - Site Plan</h1>
+            </div>
+            <nav>
+              <ul>
+                <div><a href="index.html">&#127968 HOME</a></div>
+                <div><a href="target-audience.html" target="_blank">TARGET AUDIENCE</a></div>
+                <div><a href="color-scheme.html" target="_blank">COLOR SCHEME</a></div>
+                <div><a href="typographie.html" target="_blank">TYPOGRAPHIE</a></div>
               </ul>
-            </header>
+            </nav>
+          </header>
             <main>
-
-            </main>
-            <footer>
-                <div id="signature">
-                    &copy;<span id="year"></span> .:|:. Haingotiana N. Rambikarison .:|:. Madagascar
-                </div>
-                <div id="update">
-                    Last Modified: <span id="lastModifiedDate"></span>
-                </div>   
-            </footer>
-            <script src="./js/date.js"></script>
-        </div>
+              <h1 class="target">Target Audience</h1>
+              <div id="target-sub">
+                <p>Green'Fingers Chamber is focusing its activity on the development of agriculture industry in the district of Ambohidratrimo, 
+                  located 5km away from the International Airport of Madagascar. We bring together local farmers, technicians and operators, 
+                  as well as all those interested in promoting the business around it.</p>
+                <h2>Personas</h2>
+                  <h3>
+                    Persona 1:
+                  </h3>
+                  <p>Name: Hubert Rakoto</p> 
+                  <p>Age: 35</p>
+                  <p>Professional activities: Company owner, operating in agricultural sector. He is a collector, processor and exporter of local farmer products. 
+                    Hubert has an experience of more than 5 years and has a strong knowledge about agricultural chains. 
+                    He operates inside and outside the district but prioritize the local business.
+                  </p>
+                  <h3>Persona 2:</h3>
+                  <p>Name: Safidy Malala:</p>
+                  <p>Age: 45</p>
+                  <p>Professional activities: Safidy is at the head of a cooperative of small farmers. She supports community empowerment and motivates, informs and teaches local farmers to improve their methods and to increase competitiveness.
+                  </p>
+                <h2>Scenarios</h2>
+                <p>Why joining Green'Fingers Chamber?</p>
+                <p>What are the benefits to being member of the chamber?</p>
+                <p>Can I expand my networks through the chamber?</p>
+                <p>What are my reponsibilities as a Green'Fingers Chamber's family?</o>
+                <p>What are the opportunities within the chamber that could help me with my current activies</p>
+                
+                
+              </div>
+          </main>
+          <footer>
+            <div id="signature">
+              &copy;<span id="year"></span> .:|:. Haingotiana N. Rambikarison .:|:. Madagascar
+            </div>
+            <div id="update">
+              Last Modified: <span id="lastModifiedDate"></span>
+            </div>   
+          </footer>
+          <script src="./js/date.js"></script>
+      </div>
     </body>
