--- a/lesson03/typographie.html
+++ b/lesson03/typographie.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
-    <head>
-        <meta charset = "utf-8" />
+  <head>
+    <meta charset = "utf-8" />
         <meta name = "viewport" content="width=device-width, initial-scale=1.0" />
         <meta name = "description" content ="WDD230 Lesson 03: Description of the Typographie used for the Green'Fingers Chamber of Commerce">
         <title>Haingotiana WDD230 Chamber of Commerce Website</title>
@@ -9,36 +9,71 @@
         <link rel="stylesheet" href="./css/main.css">
         <link rel="stylesheet" href="./css/medium.css">
         <link rel="stylesheet" href="./css/large.css">
-    </head>
-    <body>
-        <div id="content">
-            <header>
-              <div id="heading">
-                <div class="logo-box">
-                  <img src="./images/Green'Fingers.jpg" height="auto" width="auto" alt = "green-fingers-chamber logo picture">
-                </div>
-                <h1>Green'Fingers Chamber - Site Plan</h1>
-              </div>
-              <nav>
-                <ul>
-                  <div><a href="index.html">&#127968 HOME</a></div>
-                  <div><a href="target-audience.html" target="_blank">TARGET AUDIENCE</a></div>
-                  <div><a href="color-scheme.html" target="_blank">COLOR SCHEME</a></div>
-                  <div><a href="typographie.html" target="_blank">TYPOGRAPHIE</a></div>
-                </nav>
-              </ul>
-            </header>
-            <main>
-
-            </main>
-            <footer>
-                <div id="signature">
-                    &copy;<span id="year"></span> .:|:. Haingotiana N. Rambikarison .:|:. Madagascar
-                </div>
-                <div id="update">
-                    Last Modified: <span id="lastModifiedDate"></span>
-                </div>   
-            </footer>
-            <script src="./js/date.js"></script>
+  </head>
+  <body>
+    <div id="content">
+      <header>
+        <div id="heading">
+          <div class="logo-box">
+              <img src="./images/Green'Fingers.jpg" height="auto" width="auto" alt = "green-fingers-chamber logo picture">
+          </div>
+          <h1>Green'Fingers Chamber - Site Plan</h1>
         </div>
-    </body>
+        <nav>
+          <ul>
+            <div><a href="index.html">&#127968 HOME</a></div>
+            <div><a href="target-audience.html" target="_blank">TARGET AUDIENCE</a></div>
+            <div><a href="color-scheme.html" target="_blank">COLOR SCHEME</a></div>
+            <div><a href="typographie.html" target="_blank">TYPOGRAPHIE</a></div>
+          </ul>
+        </nav>
+      </header>
+        <main>
+          <h1 class="typo">Typographie</h1>
+          <div id="typographie-content">
+            <h2>
+              Heading Font: Otomanopee One, Times New Roman, serif.  
+            </h2>
+            <p class="heading-fonts">
+              I choose Otomanopee One because it has a modern look and has a warm feel. It is also easy to read. 
+              As a heading font, it has an attractive look and catch promptly the reader attention, so he/she can notice where to start. 
+              Otomanopee One is supoorted by all browsers and is a web safe font.
+            </p>
+      
+            <h2 class="normal">
+              Paragraph Font: Montserrat, serif 
+            </h2>
+            <p>
+              Montserrat is a versatile font and can be used in multiple domains, one of the reason I chose to use it for my paragraph. It gives a friendly look to my website. 
+              I like it also because it is easy to read. All the characters have the same width. 
+              This font suits more my website main purpose and is supported by many browsers.. 
+            </p>
+            <h2 class="normal">
+              Normal paragraph example
+            </h2>
+            <p>
+              Green'Fingers Chamber is focusing its activity on the development of agriculture industry in the district of Ambohidratrimo, 
+              located 5km away from the International Airport of Madagascar. We bring together local farmers, technicians and operators, 
+              as well as all those interested in promoting the business around it.
+            </p>
+            <h2 class="normal">
+              Colored paragraph example
+            </h2>
+            <p class="colored-text">
+              Our training activities are carried out throughout the district through the direct implementation of projects and partnerships to improve local farmers' agricultural production, 
+              market linkages and sustainable incomes.
+              Important local, regional and international events that could be related to its development and that could benefit each member will be updated here on a regular basis.
+            </p>
+          </div>
+        </main>  
+        <footer>
+            <div id="signature">
+                &copy;<span id="year"></span> .:|:. Haingotiana N. Rambikarison .:|:. Madagascar
+            </div>
+            <div id="update">
+                Last Modified: <span id="lastModifiedDate"></span>
+            </div>   
+      </footer>
+      <script src="./js/date.js"></script>
+    </div>  
+  </body>
