Last update on the chamber site plan

--- a/lesson03/color-scheme.html
+++ b/lesson03/color-scheme.html
@@ -17,7 +17,7 @@
             <div class="logo-box">
               <img src="./images/Green'Fingers.jpg" height="auto" width="auto" alt = "green-fingers-chamber logo picture">
             </div>
-            <h1>Green'Fingers Chamber - Site Plan</h1>
+            <h1 class="site-name">Green'Fingers Chamber - Site Plan</h1>
           </div>
             <nav>
               <ul>
@@ -29,9 +29,9 @@
             </nav>
         </header>
         <main>
-          <h1 class= color>
+          <h2 class= color>
               Color Scheme
-          </h1>
+          </h2>
               <p>Palette URL: <a href="https://coolors.co/palette/ffffff-104911-ffd449-f9a620" target="_blank">https://coolors.co/palette/ffffff-104911-ffd449-f9a620</a></p>
           <table class="colors">
               <tr><th>Primary</th><th>Secondary</th><th>Accent 1</th><th>Accent 2</th></tr>
