--- a/lesson03/index.html
+++ b/lesson03/index.html
@@ -23,7 +23,7 @@
           <div class="logo-box">
             <img src="./images/Green'Fingers.jpg" height="auto" width="auto" alt = "green-fingers-chamber logo picture">
           </div>
-          <h1>Green'Fingers Chamber - Site Plan</h1>
+          <h1 class="site-name">Green'Fingers Chamber - Site Plan</h1>
         </div>
         <nav>
           <ul>
