--- a/lesson03/target-audience.html
+++ b/lesson03/target-audience.html
@@ -12,25 +12,25 @@
     </head>
     <body>
       <div id="content">
-          <header>
-            <div id="heading">
-              <div class="logo-box">
-                <img src="./images/Green'Fingers.jpg" height="auto" width="auto" alt = "green-fingers-chamber logo picture">
-              </div>
-              <h1>Green'Fingers Chamber - Site Plan</h1>
+        <header>
+          <div id="heading">
+            <div class="logo-box">
+              <img src="./images/Green'Fingers.jpg" height="auto" width="auto" alt = "green-fingers-chamber logo picture">
             </div>
-            <nav>
-              <ul>
-                <div><a href="index.html">&#127968 HOME</a></div>
-                <div><a href="target-audience.html" target="_blank">TARGET AUDIENCE</a></div>
-                <div><a href="color-scheme.html" target="_blank">COLOR SCHEME</a></div>
-                <div><a href="typographie.html" target="_blank">TYPOGRAPHIE</a></div>
-              </ul>
+            <h1 class="site-name">Green'Fingers Chamber - Site Plan</h1>
+          </div>
+          <nav>
+            <ul>
+              <div><a href="index.html">&#127968 HOME</a></div>
+              <div><a href="target-audience.html" target="_blank">TARGET AUDIENCE</a></div>
+              <div><a href="color-scheme.html" target="_blank">COLOR SCHEME</a></div>
+              <div><a href="typographie.html" target="_blank">TYPOGRAPHIE</a></div>
             </nav>
-          </header>
-            <main>
-              <h1 class="target">Target Audience</h1>
-              <div id="target-sub">
+          </ul>
+        </header>
+          <main>
+            <h1 class="target">Target Audience</h1>
+            <div id="target-sub">
                 <p>Green'Fingers Chamber is focusing its activity on the development of agriculture industry in the district of Ambohidratrimo, 
                   located 5km away from the International Airport of Madagascar. We bring together local farmers, technicians and operators, 
                   as well as all those interested in promoting the business around it.</p>
