--- a/lesson03/typographie.html
+++ b/lesson03/typographie.html
@@ -17,7 +17,7 @@
           <div class="logo-box">
               <img src="./images/Green'Fingers.jpg" height="auto" width="auto" alt = "green-fingers-chamber logo picture">
           </div>
-          <h1>Green'Fingers Chamber - Site Plan</h1>
+          <h1 class="site-name">Green'Fingers Chamber - Site Plan</h1>
         </div>
         <nav>
           <ul>
@@ -29,36 +29,36 @@
         </nav>
       </header>
         <main>
-          <h1 class="typo">Typographie</h1>
+          <h2 class="typo">Typographie</h2>
           <div id="typographie-content">
-            <h2>
+            <h3>
               Heading Font: Otomanopee One, Times New Roman, serif.  
-            </h2>
-            <p class="heading-fonts">
+            </h3>
+            <p>
               I choose Otomanopee One because it has a modern look and has a warm feel. It is also easy to read. 
               As a heading font, it has an attractive look and catch promptly the reader attention, so he/she can notice where to start. 
-              Otomanopee One is supoorted by all browsers and is a web safe font.
+              Otomanopee One is supported by all browsers and is a web safe font.
             </p>
       
-            <h2 class="normal">
+            <h3 class="normal">
               Paragraph Font: Montserrat, serif 
-            </h2>
+            </h3>
             <p>
               Montserrat is a versatile font and can be used in multiple domains, one of the reason I chose to use it for my paragraph. It gives a friendly look to my website. 
               I like it also because it is easy to read. All the characters have the same width. 
               This font suits more my website main purpose and is supported by many browsers.. 
             </p>
-            <h2 class="normal">
+            <h3 class="normal">
               Normal paragraph example
-            </h2>
+            </h3>
             <p>
               Green'Fingers Chamber is focusing its activity on the development of agriculture industry in the district of Ambohidratrimo, 
               located 5km away from the International Airport of Madagascar. We bring together local farmers, technicians and operators, 
               as well as all those interested in promoting the business around it.
             </p>
-            <h2 class="normal">
+            <h3 class="normal">
               Colored paragraph example
-            </h2>
+            </h3>
             <p class="colored-text">
               Our training activities are carried out throughout the district through the direct implementation of projects and partnerships to improve local farmers' agricultural production, 
               market linkages and sustainable incomes.
