--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         <ul>
                             <li>Lesson 02: <a href="./lesson02/design_principles.html">Design Principles</li>
                             <li>Lesson 03: <a href="./lesson03/index.html">Website Planning Document</a></li>
-                            <li>Lesson 04: <a href="">Title</a></li>
+                            <li>Lesson 04: <a href="./chamber/index.html"></a>Chamber Home Page Building</li>
                             <li>Lesson 05: <a href="">Title</a></li>
                             <li>Lesson 06: <a href="">Title</a></li>
                             <li>Lesson 07: <a href="">Title</a></li>
