fix  small css, accidentally renamed

--- a/lesson03/color-scheme.html
+++ b/lesson03/color-scheme.html
@@ -6,7 +6,7 @@
         <meta name = "description" content ="WDD230 Lesson 03: Color Scheme for the Green'Fingers Chamber of Commerce"/>
         <title>Haingotiana WDD230 Chamber of Commerce Website</title>
         <link rel="stylesheet" href="./css/normalize.css">
-        <link rel="stylesheet" href="./css/main.css">
+        <link rel="stylesheet" href="./css/small.css">
         <link rel="stylesheet" href="./css/medium.css">
         <link rel="stylesheet" href="./css/large.css">
     </head>
