--- a/chamber/index.html
+++ b/chamber/index.html
@@ -39,7 +39,7 @@
         </header>
         <main>
             <div class="container">
-                <p>Hero Image and Call to Action</p>
+                <p>hero image and call to action</p>
             </div>
             <div class="container1">
                 <p>news</p>
@@ -49,10 +49,10 @@
                 <p>events</p>
             </div>
             <div class="container3">
-                <p>weather</p>>
+                <p>weather</p>
             </div>
             <div class="container4">                
-                <p>join></p>
+                <p>join</p>
             </div>
             <div class="container4">                
                 <p>company spotlight</p>
@@ -61,6 +61,7 @@
         <footer>
             <p>Green'Fingers Chamber</p>
             <p>120 I Talatamaty Ambohidratrimo - Tana 105</p>
+            <p>greenfingreschamber@chamber.org</p>
             <p>Map</p>
             <div id="signature">&copy;WDD230: Haingotiana N Rambikarison Chamber Project</div>
             <div id="update">
