--- a/lesson03/target-audience.html
+++ b/lesson03/target-audience.html
@@ -6,7 +6,7 @@
         <meta name = "description" content ="WDD230 Lesson 03: Description of the Target Audience for the Green'Fingers Chamber of Commerce">
         <title>Haingotiana WDD230 Chamber of Commerce Website</title>
         <link rel="stylesheet" href="./css/normalize.css">
-        <link rel="stylesheet" href="./css/main.css">
+        <link rel="stylesheet" href="./css/small.css">
         <link rel="stylesheet" href="./css/medium.css">
         <link rel="stylesheet" href="./css/large.css">
     </head>
