file name changed on image: remove upper case, remove target blank on links to new page

--- a/lesson03/index.html
+++ b/lesson03/index.html
@@ -21,16 +21,16 @@
       <header>
         <div id="heading">
           <div class="logo-box">
-            <img src="./images/Green'Fingers.jpg" height="auto" width="auto" alt = "green-fingers-chamber logo picture">
+            <img src="./images/greenfingers.jpg" height="auto" width="auto" alt = "green-fingers-chamber logo picture">
           </div>
           <h1 class="site-name">Green'Fingers Chamber - Site Plan</h1>
         </div>
         <nav>
           <ul>
             <div><a href="index.html">&#127968 HOME</a></div>
-            <div><a href="target-audience.html" target="_blank">TARGET AUDIENCE</a></div>
-            <div><a href="color-scheme.html" target="_blank">COLOR SCHEME</a></div>
-            <div><a href="typographie.html" target="_blank">TYPOGRAPHIE</a></div>
+            <div><a href="target-audience.html">TARGET AUDIENCE</a></div>
+            <div><a href="color-scheme.html">COLOR SCHEME</a></div>
+            <div><a href="typographie.html">TYPOGRAPHIE</a></div>
           </nav>
         </ul>
       </header>
@@ -62,7 +62,7 @@
               </p>
           </div>
           <div class="logo-box-main">
-              <img src="./images/Green'Fingers.jpg" height="auto" width="auto" alt = "green-fingers-chamber logo picture">
+              <img src="./images/greenfingers.jpg" height="auto" width="auto" alt = "green-fingers-chamber logo picture">
           </div>
         </section>
       </main>
