--- a/lesson03/typographie.html
+++ b/lesson03/typographie.html
@@ -15,7 +15,7 @@
       <header>
         <div id="heading">
           <div class="logo-box">
-              <img src="./images/Green'Fingers.jpg" height="auto" width="auto" alt = "green-fingers-chamber logo picture">
+              <img src="./images/greenfingers.jpg" height="auto" width="auto" alt = "green-fingers-chamber logo picture">
           </div>
           <h1 class="site-name">Green'Fingers Chamber - Site Plan</h1>
         </div>
