more deletion of tareget blank from other pages

--- a/lesson03/target-audience.html
+++ b/lesson03/target-audience.html
@@ -22,9 +22,9 @@
           <nav>
             <ul>
               <div><a href="index.html">&#127968 HOME</a></div>
-              <div><a href="target-audience.html" target="_blank">TARGET AUDIENCE</a></div>
-              <div><a href="color-scheme.html" target="_blank">COLOR SCHEME</a></div>
-              <div><a href="typographie.html" target="_blank">TYPOGRAPHIE</a></div>
+              <div><a href="target-audience.html">TARGET AUDIENCE</a></div>
+              <div><a href="color-scheme.html">COLOR SCHEME</a></div>
+              <div><a href="typographie.html">TYPOGRAPHIE</a></div>
             </nav>
           </ul>
         </header>
