--- a/chamber/index.html
+++ b/chamber/index.html
@@ -11,6 +11,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Otomanopee+One&display=swap" rel="stylesheet">
+        <link rel="shortcut icon" href="favicon.ico">
         <link rel="stylesheet" href="./css/normalize.css">
         <link rel="stylesheet" href="./css/small.css">
         <link rel="stylesheet" href="./css/medium.css">
@@ -19,14 +20,15 @@
     </head>
     <body>
         <header>
-            <div id="site-logo">
-                <img src="./images/Green'Fingers.jpg" alt="Image of Green'Fingers logo">
-            </div>
-            <h1 id="site-name">Green'Fingers Chamber</h1>
-            <nav class="navigation-menu">
-            <div id="social">
+            <section class="headings">
+                <div id="site-logo">
+                    <img src="./images/greenfingers.jpg" alt="Image of Green'Fingers logo">
+                </div>
+                <h1 id="site-name">Green'Fingers Chamber</h1>  
+                <div id="social">
                 <p>facebook</p>
                 <p>instagram</p>
+            </section>
             </div>
                 <ul>
                     <li><a>Home</a></li>
